Fix front page login boxes to not overflow in FF.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -268,15 +268,18 @@ div#login {
 }
 
 div#banner div#login input {
-  padding: 2px;
   font-size: .85em;
 }
 
 div#login input.email {
+  padding: 2px;
+  border: 1px solid #069;
   width: 220px;
 } 
 
 div#login input.password {
+  padding: 2px;
+  border: 1px solid #069;
   width: 110px;
 }
 
